test: styleguide: update for  new Firefox ESR
- add new styleguide reference hashes
- upgrade test spec,  reorder for cider
- attach screenshots as .tar.gz if regenerating or failed
    - for local checking and diffing, and to always keep the latest reference as file (not only hash)
- styleguide: set min-height and min-width on window for more consistent screenshots

--- a/.cider-ci/partials/rails_task_defaults.yml
+++ b/.cider-ci/partials/rails_task_defaults.yml
@@ -21,6 +21,12 @@ task_defaults:
     coverage_last_run:
       glob: 'coverage/.last_run.json'
       content-type: application/json
+    styleguide_artefacts:
+      glob: 'tmp/styleguide-ref.tar.gz'
+      content-type: application/x-compressed
+    styleguide_hashes:
+      glob: 'dev/test/styleguide-shasums.txt'
+      content-type: text/plain
 
 
   scripts:
