File based splitting of Cider-CI tasks; Log-level WARN in tests
Squashed commit of the following:

commit e86e6a759ab6127bcbb8cd60cdb3a3db5d6603d5
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jan 26 08:10:56 2015 +0100

    Try to make assert_modal_visible to wait for it

commit a5e711fe4be4544aa9a23b153a2723eaf3104d62
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jan 26 07:56:41 2015 +0100

    Try to make modal_not_visibile to wait for modal to disappear

commit 327a389945891c6c6b6d69cdaca05ddd69841baa
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jan 26 07:48:53 2015 +0100

    Switch from debug to warn loglevel for test env

commit 6abb9b3e68d32f20f9b2cd06b08c891b6092570e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jan 26 07:45:36 2015 +0100

    Remove and ignore result.json

commit 97a4bbe75679729da41d89d154524ff24859b271
Author: Thomas Schank <DrTom@schank.ch>
Date:   Thu Jan 22 22:03:58 2015 +0100

    Back to file based splitting of Cider-CI tasks

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 .rvmrc
 .sass-cache/
 .yardoc
+Gemfile.local
+Gemfile.local.lock
 app/assets/stylesheets/config/local/
 config/*.conf
 config/*.conf_with_pipe
@@ -41,8 +43,8 @@ db/schema.rb
 db/sphinx/
 db/test_structure.sql
 deb/seeds.rb
-dev/node_modules/
 design/icon-font-sources/*.svg
+dev/node_modules/
 doc/api/yard
 log/*.log
 log/searchd.development.pid
@@ -50,7 +52,6 @@ log/searchd.test.pid
 public/assets/
 public/previews/
 rerun*.txt
+result.json
 tmp/
 vendor/bundle/
-Gemfile.local
-Gemfile.local.lock
