--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -9,8 +9,18 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/application_controller_spec.rb"
+"./spec/controllers/collections_controller_spec.rb":
+  name: "./spec/controllers/collections_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/collections_controller_spec.rb"
+"./spec/controllers/filter_sets_controller_spec.rb":
+  name: "./spec/controllers/filter_sets_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/filter_sets_controller_spec.rb"
 "./spec/controllers/media_entries_controller_spec.rb":
-  name: assigns media entries
+  name: "./spec/controllers/media_entries_controller_spec.rb"
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/media_entries_controller_spec.rb"
