--- a/.cider-ci.yml
+++ b/.cider-ci.yml
@@ -1,15 +1,25 @@
 executions:
   Tests: 
-    default: true
+    description: >
+      This executions runs several bash scripts. Some of them sleep for a
+      while. Some of them fail with a certain probability.  One of them
+      combines both by using the `timeout` directive of a script.
     specification: 
       _cider-ci_include: /.cider-ci/test_spec.yml
   Coverage: 
+    description: >
+      Determine and validate the coverage of the tests. Needs to be run
+      **after** the `Tests` have passed. 
     specification: 
       _cider-ci_include: /.cider-ci/coverage_spec.yml
   Code-Check: 
+    description: >
+      Ensure code-style, complexity, and (the absence) of duplications are up
+      to standards. 
     specification: 
       _cider-ci_include: /.cider-ci/code-check_spec.yml
   Deploy-Test:
+    description: >
+       Deploy this commit to test.madek.zhdk.ch. 
     specification: 
       _cider-ci_include: /.cider-ci/deploy_test_spec.yml
-
