Admin interface: vocabularies & vocables - admin can manage vocabularies - admin can delete a vocabulary - ability to manage vocables - ability to delete a vocable - vocable is searchable by a meta key - possibility to create a vocable

--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -39,6 +39,16 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/admin/users_controller_spec.rb"
+"./spec/controllers/admin/vocables_controller_spec.rb":
+  name: "./spec/controllers/admin/vocables_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/admin/vocables_controller_spec.rb"
+"./spec/controllers/admin/vocabularies_controller_spec.rb":
+  name: "./spec/controllers/admin/vocabularies_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/admin/vocabularies_controller_spec.rb"
 "./spec/controllers/admin/zencoder_jobs_controller_spec.rb":
   name: "./spec/controllers/admin/zencoder_jobs_controller_spec.rb"
   scripts:
