--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,16 @@ site_dir: _docs_html
 markdown_extensions: [tables, fenced_code]
 theme: readthedocs
 
+#  tmp: does not work but should:
+# markdown_extensions: [tables, fenced_code, wikilinks(base_url='/wiki/', end_url='.html')]
+
+
 # The Table of contents, files relative to ./doc
 # - [ file, main-section, sub-section name/heading ]
 pages:
   - ['index.md']
   - ['manual/index.md', 'Manual', 'Overview']
-  - ['manual/models.md', 'Manual', 'Models']
+  - ['manual/entities/index.md', 'Manual', 'Entities']
   - ['manual/views.md', 'Manual', 'Views']
   - ['manual/glossary.md', 'Manual', 'Glossary']
 
@@ -17,5 +21,5 @@ pages:
   - ['development/developer_rules.md', 'Developer', 'Developers Rules']
   - ['development/developer_rules_admin_interface.md',  'Developer', 'Developers Rules (Admin Interface)']
   - ['development/submit_and_review_process.md', 'Developer', 'Code Submit and Review']
-  - ['development/ui_framework.md', 'Developer', 'UI Framework']
+  - ['development/ui/framework.md', 'Developer', 'UI Framework']
   - ['development/madek_dev_tips.md', 'Developer', 'Dev Tips']
