Adjust exclusive_resources directive for cider-ci conf

--- a/.cider-ci/deploy_test_spec.yml
+++ b/.cider-ci/deploy_test_spec.yml
@@ -6,7 +6,7 @@ task_defaults:
     deploy-madek-test: true
     linux: true
 
-  exclusive_global_resources:
+  exclusive_resources:
     "test.madek.zhdk.ch": true
 
   git_options: 
