--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -1,4 +1,9 @@
 ---
+"./spec/controllers/admin/app_settings_controller_spec.rb":
+  name: "./spec/controllers/admin/app_settings_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/admin/app_settings_controller_spec.rb"
 "./spec/controllers/admin/collections_controller_spec.rb":
   name: "./spec/controllers/admin/collections_controller_spec.rb"
   scripts:
