--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,10 +1,10 @@
 use_x_sendfile: false
 
-release: 
+release:
   version_major: 3
   version_minor: 0
   version_patch: 0
-  version_pre: "DEVELOPMENT"
+  version_pre: "alpha"
   version_build: ""
 
 zhdk_integration: false
