Admin interface: meta keys
- meta keys: editing, displaying details
- filtering meta keys by id / label
- links between vocabularies & meta keys in both directions
- extract meta_keys filters into concern
- add Type label in filters
- meta key can be deleted
- new template
- possibility to create a meta key

--- a/.cider-ci/tasks/rspec-feature-tasks.yml
+++ b/.cider-ci/tasks/rspec-feature-tasks.yml
@@ -9,6 +9,11 @@
   scripts:
     main:
       body: DISPLAY=":$XVNC_PORT" bundle exec rspec "./spec/features/admin/groups_spec.rb"
+"./spec/features/admin/meta_keys_spec.rb":
+  name: "./spec/features/admin/meta_keys_spec.rb"
+  scripts:
+    main:
+      body: DISPLAY=":$XVNC_PORT" bundle exec rspec "./spec/features/admin/meta_keys_spec.rb"
 "./spec/features/admin/users_spec.rb":
   name: "./spec/features/admin/users_spec.rb"
   scripts:
