presenters: GroupShow [#89198594 completed]

--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -219,6 +219,11 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/presenters/filter_sets/filter_set_thumb_spec.rb"
+"./spec/presenters/groups/group_show_spec.rb":
+  name: "./spec/presenters/groups/group_show_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/presenters/groups/group_show_spec.rb"
 "./spec/presenters/media_entries/media_entry_thumb_spec.rb":
   name: "./spec/presenters/media_entries/media_entry_thumb_spec.rb"
   scripts:
