--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -209,11 +209,21 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/modules/living_styleguide_spec.rb"
+"./spec/presenters/collections/collection_permissions_show_spec.rb":
+  name: "./spec/presenters/collections/collection_permissions_show_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/presenters/collections/collection_permissions_show_spec.rb"
 "./spec/presenters/collections/collection_thumb_spec.rb":
   name: "./spec/presenters/collections/collection_thumb_spec.rb"
   scripts:
     main:
       body: bundle exec rspec "./spec/presenters/collections/collection_thumb_spec.rb"
+"./spec/presenters/filter_sets/filter_set_permissions_show_spec.rb":
+  name: "./spec/presenters/filter_sets/filter_set_permissions_show_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/presenters/filter_sets/filter_set_permissions_show_spec.rb"
 "./spec/presenters/filter_sets/filter_set_thumb_spec.rb":
   name: "./spec/presenters/filter_sets/filter_set_thumb_spec.rb"
   scripts:
@@ -224,6 +234,11 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/presenters/groups/group_show_spec.rb"
+"./spec/presenters/media_entries/media_entry_permissions_show_spec.rb":
+  name: "./spec/presenters/media_entries/media_entry_permissions_show_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/presenters/media_entries/media_entry_permissions_show_spec.rb"
 "./spec/presenters/media_entries/media_entry_thumb_spec.rb":
   name: "./spec/presenters/media_entries/media_entry_thumb_spec.rb"
   scripts:
