--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -29,6 +29,11 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/admin/media_files_controller_spec.rb"
+"./spec/controllers/admin/meta_datums_controller_spec.rb":
+  name: "./spec/controllers/admin/meta_datums_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/admin/meta_datums_controller_spec.rb"
 "./spec/controllers/admin/meta_keys_controller_spec.rb":
   name: "./spec/controllers/admin/meta_keys_controller_spec.rb"
   scripts:
