Update required cider-ci traits

--- a/.cider-ci/deploy_test_spec.yml
+++ b/.cider-ci/deploy_test_spec.yml
@@ -5,6 +5,7 @@ task_defaults:
   traits:
     deploy-madek-test: true
     linux: true
+    ansible: true
 
   exclusive_resources:
     "test.madek.zhdk.ch": true
