--- a/.cider-ci/coverage_spec.yml
+++ b/.cider-ci/coverage_spec.yml
@@ -7,6 +7,7 @@ task_defaults:
     linux: true
     rbenv: true
     ruby: true
+    cider-ci_api-access: true
   scripts:
     bundle: 
       timeout: 500
