Finish mr_through_meta_data_intersect_viewable_90285608

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,6 +48,9 @@ Metrics/LineLength:
 Metrics/MethodLength:
   Max: 20
 
+Metrics/ParameterLists:
+  Max: 12
+
 Metrics/PerceivedComplexity:
   Max: 11
 
