Rework ApiClient to be structurally more equiv. to user

--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -99,6 +99,11 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/models/api_client_spec.rb"
+"./spec/models/api_clients_and_users_spec.rb":
+  name: "./spec/models/api_clients_and_users_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/models/api_clients_and_users_spec.rb"
 "./spec/models/collection_spec.rb":
   name: "./spec/models/collection_spec.rb"
   scripts:
